fix: field lable left is too small because ui adjust

--- a/src/field/index.less
+++ b/src/field/index.less
@@ -6,6 +6,7 @@
     box-sizing: border-box;
     width: @field-label-width;
     margin-right: @field-label-margin-right;
+    margin-left: 6px;
     color: @field-label-color;
     text-align: left;
     word-wrap: break-word;
